2006-05-19  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: Define methods to get custom types.
	* src/GrampsDb/_GrampsBSDDB.py: Load/save marker_types.

2006-05-19  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_SecondaryObject.py: added, provide is_equal
	* src/RelLib/_Url.py: inherit from SecondaryObject
	* src/RelLib/_MediaRef.py: inherit from SecondaryObject
	* src/RelLib/_ChildRef.py: inherit from SecondaryObject
	* src/RelLib/_Name.py: inherit from SecondaryObject
	* src/RelLib/_Address.py: inherit from SecondaryObject
	* src/RelLib/_SourceRef.py: inherit from SecondaryObject
	* src/RelLib/_RepoRef.py: inherit from SecondaryObject
	* src/RelLib/_PersonRef.py: inherit from SecondaryObject
	* src/RelLib/_Attribute.py: inherit from SecondaryObject
	* src/RelLib/_Note.py: inherit from SecondaryObject
	* src/RelLib/_Location.py: inherit from SecondaryObject
	* src/RelLib/_EventRef.py: inherit from SecondaryObject
	* src/RelLib/_Event.py: inherit from SecondaryObject
	* src/RelLib/_LdsOrd.py: inherit from SecondaryObject

2006-05-18  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Remove unused methods; remove
	unused secondary tables; add more custom type holders.
	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase.__init__): Add more
	custom type holders.
	(commit_*): update custom type sets on commit.
	* src/DisplayTabs/_BackRefList.py (edit_button_clicked): Typo.
	* src/DataViews/_RepositoryView.py (edit, on_double_click): Catch
	exception.
	* src/GrampsWidgets.py (PlaceEntry.add_del_clicked) 
	(PlaceEntry.share_clicked): Catch exception.
	* src/GrampsDb/_DbUtils.py (db_copy): Copy bookmarks and gender stats.
	* data/grampsxml.dtd: Update for new bookmarks.
	* data/grampsxml.rng: Update for new bookmarks.
	* src/GrampsDb/_WriteXML.py (write_bookmarks): Add method to write
	new bookmarks.
	(XmlWriter.write_xml_data): Do not export name groups.
	* src/GrampsDb/_ReadXML.py (start_bmark): Parse new bookmarks